<resources>
    <string name="app_name">SMICS</string>
    <string name="txt_welcome">Bienvenid@s</string>
    <string name="txt_logoDescription">Logo</string>
    <string name="button_login">Hacer registros</string>

    <string name="redes_whatsApp">3128433244</string>
    <string name="redes_twiter">.@parteriaSegura</string>
    <string name="redes_facebook">.@parteriaSegura</string>
    <string name="redes_instagram">.@ParteriaSegura2023</string>

    <string name="registration_meg">Registro de MEG</string>
    <string name="registration_factors">Registrar factores de riesgo</string>
    <string name="registration_evaluation">Evaluación de MEG</string>
    <string name="registration_partera">Registrar datos de generales</string>

    <string name="img_description1">Silueta de mujer</string>

    <string name="meg_name">Nombre:</string>
    <string name="meg_lastname">Apellido:</string>
    <string name="meg_age">Edad:</string>
    <string name="meg_id">C.C:</string>
    <string name="meg_region">Region:</string>
    <string name="meg_gestation">Tiempo \nde gestación:</string>

    <string-array name="regions">
        <item>Norte</item>
        <item>Centro</item>
        <item>Pacifico</item>
        <item>Oriente</item>
        <item>Macizo</item>
        <item>Piedemonte</item>
    </string-array>

    <string-array name="times">
        <item>Meses</item>
        <item>Semanas</item>
        <item>Días</item>
    </string-array>

    <string name="button_register">Registrar</string>
    <string name="txt_factors">Selecciona factores de riesgo</string>
    <string name="txt_identifier">Identifica a la gestante</string>

    <string name="check_factor1">Ambientales</string>
    <string name="check_factor2">Sociales</string>
    <string name="check_factor3">Laborales</string>
    <string name="check_factor4">Domésticos</string>
    <string name="check_factor5">Sentimentales</string>
    <string name="check_factor6">Maritales</string>

    <string name="project_title1">¿Qué hacemos?</string>
    <string name="project_description">
        Contribuir en la promoción de la salud Maternay perinatal
        segura previniendo la mortalidad atreves de la articulación de la sabiduría ancestral
        y los servicios de salud materna convencional.
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>